Full addon rewrite
Functionality is preserved and code has been split to lighten the main module class.
Use jspecify nullability annotations; Mojang has adopted these internally, and we should prefer them over the JetBrains ones.